crates/toml_edit/tests/fixtures/invalid/control/rawmulti-del.stderr
TOML parse error at line 1, column 23
  |
1 | rawmulti-del = '''null'''
  |                       ^
Invalid multiline literal string
